mcp-client: Support full DCR and scope step up
- With this change, it is not necessary to programmatically trigger DCR:
  MCP clients react to HTTP 401 errors and start the DCR flow, see https://modelcontextprotocol.io/specification/2025-11-25/basic/authorization#dynamic-client-registration
- "Scope step up" flow is now supported, see https://modelcontextprotocol.io/specification/2025-11-25/basic/authorization#scope-selection-strategy

New concepts:

- `OAuth2SyncAuthorizationErrorHandler` reacts to HTTP 401/403 from the
  MCP server
- `McpOAuth2ClientManager` orchestrates DCR and scope step up flows

Breaking changes:

From 0.1.1:
- `OAuth2AuthorizationCodeSyncHttpRequestCustomizer` constructor now
  takes a ClientRegistrationRepository parameter.

From 0.1.2:
- `McpClientRegistrationRepository` interface reworked
- `InMemoryMcpClientRegistrationRepository` constructor takes no
  arguments
- `McpMetadataDiscoveryService.getProtectedResourceMetadata` reworked
- `WwwAuthenticateParameters` class reworked

Signed-off-by: Daniel Garnier-Moiroux <git@garnier.wf>